tests/core/snapshots/js-directive.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "test.js", type: Script)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  hello: User! @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  id: Int!
  name: String! @js(name: "name")
}
