tests/core/snapshots/nesting-level3.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  post: Post @http(url: "http://jsonplaceholder.typicode.com/posts/1")
}

type Todo {
  completed: Boolean
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  todos: [Todo]
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.id}}/todos")
  username: String!
  website: String
}
